--- a/stage1_reality.html
+++ b/stage1_reality.html
@@ -1,34 +1,88 @@
-from IPython.display import display, HTML
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Stage 1 – Reality</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .container {
+      display: flex;
+      gap: 40px;
+      margin-top: 30px;
+      font-size: 16px;
+      line-height: 1.6;
+    }
 
-html_reality = """
-<div style="display: flex; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 16px; line-height: 1.6;">
+    .left-col {
+      width: 55%;
+      padding-right: 30px;
+    }
 
-  <!-- Left Column: Explanation -->
-  <div style="width: 55%; padding-right: 30px;">
-    <h2 style="color: #2a4d69; border-bottom: 2px solid #ccc;">Stage 1: Reality</h2>
-    <h3 style="margin-top: 10px;">What kind of motion does a projectile follow?</h3>
-    <p>
-      Imagine a <strong>cannonball</strong> fired from a fort. After the initial explosive push, it rises, slows, and falls — all while tracing a curved path through the air.
-    </p>
-    <p>
-      Now consider a <strong>cricketer</strong> on the boundary throwing the ball toward the wicketkeeper, or a <strong>footballer</strong> kicking the ball across the field.
-      In all these cases, once the object is in the air, it is under the influence of only one force: <strong>gravity</strong>.
-    </p>
-    <p>
-      The motion that follows is called <strong>projectile motion</strong>. The object moves in two dimensions — horizontally and vertically — and its path is typically a parabola.
-      Our goal is to model this motion mathematically so we can predict the object's position at any time.
-    </p>
+    .right-col {
+      width: 45%;
+    }
+
+    .right-col img {
+      width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.2);
+    }
+
+    .caption {
+      font-size: 13px;
+      text-align: center;
+      margin-top: 8px;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Top Navigation -->
+  <nav class="top-nav">
+    <a href="index.html">🏠 Home</a>
+    <a href="stage1_reality.html">Stage 1: Reality</a>
+    <a href="stage2_idealisation.html">Stage 2: Idealisation</a>
+    <a href="stage3_discretisation.html">Stage 3: Discretisation</a>
+    <a href="stage4_geometric.html">Stage 4: Geometric</a>
+    <a href="stage5_algebraic.html">Stage 5: Algebraic</a>
+  </nav>
+
+  <!-- Page Content -->
+  <main class="container">
+    <!-- Left Column -->
+    <div class="left-col">
+      <h2 style="color: #2a4d69; border-bottom: 2px solid #ccc;">Stage 1: Reality</h2>
+      <h3 style="margin-top: 10px;">What kind of motion does a projectile follow?</h3>
+      <p>
+        Imagine a <strong>cannonball</strong> fired from a fort. After the initial explosive push, it rises, slows, and falls — all while tracing a curved path through the air.
+      </p>
+      <p>
+        Now consider a <strong>cricketer</strong> on the boundary throwing the ball toward the wicketkeeper, or a <strong>footballer</strong> kicking the ball across the field.
+        In all these cases, once the object is in the air, it is under the influence of only one force: <strong>gravity</strong>.
+      </p>
+      <p>
+        The motion that follows is called <strong>projectile motion</strong>. The object moves in two dimensions — horizontally and vertically — and its path is typically a parabola.
+        Our goal is to model this motion mathematically so we can predict the object's position at any time.
+      </p>
+    </div>
+
+    <!-- Right Column -->
+    <div class="right-col">
+      <img src="projectile_motion_diagram.png" alt="Types of projectile motion">
+      <p class="caption">Image: Different types of projectile motion – horizontal, vertical, and angled launches</p>
+    </div>
+  </main>
+
+  <!-- Navigation Between Stages -->
+  <div class="stage-nav">
+    <a class="nav-link" href="index.html">&larr; Home</a>
+    <a class="nav-link" href="stage2_idealisation.html">Stage 2: Idealisation &rarr;</a>
   </div>
 
-  <!-- Right Column: Diagram -->
-  <div style="width: 45%;">
-    <img src="projectile_motion_diagram.png"
-         alt="Diagram of different types of projectile motion"
-         style="width: 100%; border-radius: 8px; box-shadow: 0px 0px 8px rgba(0,0,0,0.2);">
-    <p style="font-size: 13px; text-align: center; margin-top: 8px;">Image: Different types of projectile motion – horizontal, vertical, and angled launches</p>
-  </div>
+  <!-- Footer -->
+  <footer>
+    &copy; 2025 Interactive Physics | Created by Dr. Aditi Sharma
+  </footer>
 
-</div>
-"""
-
-display(HTML(html_reality))
+</body>
+</html>
