--- a/stage1_reality.html
+++ b/stage1_reality.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Stage 1 – Reality</title>
+  <title>Stage 1 - Reality</title>
   <link rel="stylesheet" href="style.css">
   <style>
     .container {
@@ -41,10 +41,10 @@
   <nav class="top-nav">
     <a href="index.html">🏠 Home</a>
     <a href="stage1_reality.html">Stage 1: Reality</a>
-    <a href="stage2_idealisation.html">Stage 2: Idealisation</a>
-    <a href="stage3_discretisation.html">Stage 3: Discretisation</a>
-    <a href="stage4_geometric.html">Stage 4: Geometric</a>
-    <a href="stage5_algebraic.html">Stage 5: Algebraic</a>
+    #<a href="stage2_idealisation.html">Stage 2: Idealisation</a>
+   # <a href="stage3_discretisation.html">Stage 3: Discretisation</a>
+   # <a href="stage4_geometric.html">Stage 4: Geometric</a>
+   # <a href="stage5_algebraic.html">Stage 5: Algebraic</a>
   </nav>
 
   <!-- Page Content -->
