--- a/stage2_idealisation.html
+++ b/stage2_idealisation.html
@@ -1,75 +1,108 @@
-import matplotlib.pyplot as plt
-import numpy as np
-import ipywidgets as widgets
-from IPython.display import display, clear_output
-from ipywidgets import HBox, VBox, Output, Layout
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Stage 2 – Idealisation</title>
+  <link rel="stylesheet" href="style.css">
+  <style>
+    .container {
+      display: flex;
+      gap: 40px;
+      margin-top: 30px;
+      font-size: 16px;
+      line-height: 1.6;
+    }
 
-# Create sliders
-v0_slider = widgets.FloatSlider(value=20, min=5, max=50, step=1, description='v₀ (m/s):')
-angle_slider = widgets.FloatSlider(value=45, min=10, max=80, step=1, description='θ (°):')
+    .left-col {
+      width: 55%;
+      padding-right: 30px;
+    }
 
-# Create output widget for the plot
-plot_output = Output()
+    .right-col {
+      width: 45%;
+    }
 
-# Define function to update plot
-def update_plot(change=None):
-    with plot_output:
-        clear_output(wait=True)
+    .right-col img {
+      width: 100%;
+      border-radius: 8px;
+      box-shadow: 0 0 8px rgba(0,0,0,0.2);
+    }
 
-        v0 = v0_slider.value
-        angle = np.radians(angle_slider.value)
-        g = 9.8
+    .caption {
+      font-size: 13px;
+      text-align: center;
+      margin-top: 8px;
+    }
 
-        t_flight = 2 * v0 * np.sin(angle) / g
-        t = np.linspace(0, t_flight, 300)
-        x = v0 * np.cos(angle) * t
-        y = v0 * np.sin(angle) * t - 0.5 * g * t**2
+    .stage-nav {
+      margin-top: 40px;
+      display: flex;
+      justify-content: space-between;
+      padding: 0 20px;
+    }
 
-        fig, ax = plt.subplots(figsize=(5, 3.5))
-        ax.plot(x, y, color='darkcyan', linewidth=2)
-        ax.set_title(f"Projectile Path\n(v₀ = {v0} m/s, θ = {angle_slider.value}°)")
-        ax.set_xlabel("Horizontal Distance (m)")
-        ax.set_ylabel("Vertical Height (m)")
-        ax.set_xlim(0, max(x)+5)
-        ax.set_ylim(0, max(y)+5)
-        ax.grid(True)
-        plt.tight_layout()
-        plt.show()
+    .nav-link {
+      text-decoration: none;
+      color: #2a4d69;
+      font-weight: bold;
+    }
 
-# Initial plot rendering
-update_plot()
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      padding: 10px;
+      background-color: #f2f2f2;
+      font-size: 14px;
+    }
+  </style>
+</head>
+<body>
 
-# Re-render on slider change
-v0_slider.observe(update_plot, names='value')
-angle_slider.observe(update_plot, names='value')
+  <!-- Top Navigation -->
+  <nav class="top-nav">
+    <a href="index.html">🏠 Home</a>
+    <a href="stage1_reality.html">Stage 1: Reality</a>
+    <a href="stage2_idealisation.html">Stage 2: Idealisation</a>
+    <a href="stage3_discretisation.html">Stage 3: Discretisation</a>
+    <a href="stage4_geometric.html">Stage 4: Geometric</a>
+    <a href="stage5_algebraic.html">Stage 5: Algebraic</a>
+  </nav>
 
-# Left column: Text + sliders
-left_column = VBox([
-    widgets.HTML("""
-    <h2 style="color:#2a4d69;">Stage 2: Idealization</h2>
-    <p style="font-size:15px;">
-    Let's simplify the real-world motion into a form that physics can model easily:
-    </p>
-     <ul>
-      <li>Treat object as a <strong>point mass</strong></li>
-      <li>Ignore <strong>air resistance</strong></li>
-      <li>Assume <strong>uniform gravity</strong> (9.8 m/s²)</li>
-      <li>2D motion in a flat field</li>
-    </ul>
-    <p style="font-size:15px;">
-    Use the sliders below to adjust <b>initial speed</b> and <b>angle of projection</b>.
-    Observe the idealized parabolic path.
-    </p>
-    """),
-    v0_slider,
-    angle_slider
-], layout=Layout(width='50%'))
+  <!-- Page Content -->
+  <main class="container">
+    <!-- Left Column -->
+    <div class="left-col">
+      <h2 style="color:#2a4d69;">Stage 2: Idealisation</h2>
+      <p>Let's simplify the real-world motion into a form that physics can model easily:</p>
+      <ul>
+        <li>Treat object as a <strong>point mass</strong></li>
+        <li>Ignore <strong>air resistance</strong></li>
+        <li>Assume <strong>uniform gravity</strong> (9.8 m/s²)</li>
+        <li>2D motion in a flat field</li>
+      </ul>
+      <p>Use the sliders below to adjust <strong>initial speed</strong> and <strong>angle of projection</strong>.</p>
+      <p>In the web version, this is a static preview. For interactivity, launch the Jupyter version or Voilà app.</p>
+      <p><a href="idealisation_voila_embed.html">👉 Try the Interactive Version</a> (if hosted)</p>
+    </div>
 
-# Right column: live plot
-right_column = VBox([plot_output], layout=Layout(width='50%'))
+    <!-- Right Column -->
+    <div class="right-col">
+      <img src="projectile_idealisation_plot.png" alt="Idealised projectile motion graph">
+      <p class="caption">Plot: Parabolic path for idealised projectile motion.</p>
+    </div>
+  </main>
 
-# Combine both columns horizontally
-two_column_layout = HBox([left_column, right_column])
+  <!-- Navigation Between Stages -->
+  <div class="stage-nav">
+    <a class="nav-link" href="stage1_reality.html">&larr; Stage 1: Reality</a>
+    <a class="nav-link" href="stage3_discretisation.html">Stage 3: Discretisation &rarr;</a>
+  </div>
 
-# Display the final layout
-display(two_column_layout)
+  <!-- Footer -->
+  <footer>
+    &copy; 2025 Interactive Physics | Created by Dr. Aditi Sharma
+  </footer>
+
+</body>
+</html>
+
